--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,9 @@
   --foreground: #171717;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 /* Dark Mode (OS preference) */
 @media (prefers-color-scheme: dark) {
   :root {
